--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-intl": "^3.12.1",
     "react-scripts": "3.4.0",
     "typescript": "^3.7.5"
   },
