--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^12.12.29",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
+    "axios-hooks": "^1.9.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-intl": "^3.12.1",
