--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "axios-hooks": "^1.9.0",
+    "notistack": "^0.9.9",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-intl": "^3.12.1",
